--- a/s9s/project.conf
+++ b/s9s/project.conf
@@ -6,7 +6,9 @@
 [project]
 # uncomment & set/increase this value to forcibly upgrade
 # (overwrite, but backup will be made) the scripts
-version=20150914
+version=20150916
+# this value may be increased when the schedules has been changed
+schedule_version=1000
 
 [schedules]
 # these will be scheduled for all cluster types
@@ -21,8 +23,6 @@ s9s/mysql/connections/connections_used_pct.js="*/1 * * * *"
 s9s/mysql/connections/max_connections_used_pct.js="*/2 * * * *"     
 # health
 s9s/mysql/health/system_check.js="*/2 * * * *"        
-# innodb
-s9s/mysql/innodb/check_logfile_size.js="*/20 * * * *" 
 # schema 
 s9s/mysql/schema/schema_check_myisam.js="*/20 * * * *"
 s9s/mysql/schema/schema_check_nopk.js="*/20 * * * *"
@@ -31,6 +31,9 @@ s9s/mysql/replication/binlog_settings.js="* 0 * * *"
 # security
 s9s/mysql/security/grant_no_password.js="* 0 * * *"
 s9s/mysql/security/grant_any_host.js="* 0 * * *"
+# ndb
+s9s/ndbcluster/data_memory_usage.js="*/5 * * * *" 
+s9s/ndbcluster/index_memory_usage.js="*/5 * * * *" 
 
 [schedules-replication]
 # connections
