--- a/s9s/project.conf
+++ b/s9s/project.conf
@@ -6,15 +6,15 @@
 [project]
 # uncomment & set/increase this value to forcibly upgrade
 # (overwrite, but backup will be made) the scripts
-version=20150916
+version=20160118
 # this value may be increased when the schedules has been changed
-schedule_version=1000
+schedule_version=1006
 
 [schedules]
 # these will be scheduled for all cluster types
 s9s/host/cpu_usage.js="*/5 * * * *"
-s9s/host/disk_space_usage.js="*/5 * * * *"
-s9s/host/numa_check.js="* 0 * * *"
+s9s/host/disk_space_usage.js="*/30 * * * *"
+#s9s/host/numa_check.js="* 0 * * *"
 s9s/host/swappiness.js="* 0 * * *"
 
 [schedules-mysqlcluster]
@@ -22,10 +22,10 @@ s9s/host/swappiness.js="* 0 * * *"
 s9s/mysql/connections/connections_used_pct.js="*/1 * * * *" 
 s9s/mysql/connections/max_connections_used_pct.js="*/2 * * * *"     
 # health
-s9s/mysql/health/system_check.js="*/2 * * * *"        
+#s9s/mysql/health/system_check.js="*/2 * * * *"        
 # schema 
-s9s/mysql/schema/schema_check_myisam.js="*/20 * * * *"
-s9s/mysql/schema/schema_check_nopk.js="*/20 * * * *"
+s9s/mysql/schema/schema_check_myisam.js="0 2 * * 6"
+s9s/mysql/schema/schema_check_nopk.js="0 1 * * 6"
 # replication
 s9s/mysql/replication/binlog_settings.js="* 0 * * *"
 # security
@@ -34,6 +34,8 @@ s9s/mysql/security/grant_any_host.js="* 0 * * *"
 # ndb
 s9s/ndbcluster/data_memory_usage.js="*/5 * * * *" 
 s9s/ndbcluster/index_memory_usage.js="*/5 * * * *" 
+# p_s
+s9s/mysql/p_s/check_ps.js="* 0 * * *"
 
 [schedules-replication]
 # connections
@@ -52,6 +54,8 @@ s9s/mysql/replication/binlog_settings.js="* 0 * * *"
 # security
 s9s/mysql/security/grant_no_password.js="* 0 * * *"
 s9s/mysql/security/grant_any_host.js="* 0 * * *"
+# p_s
+s9s/mysql/p_s/check_ps.js="* 0 * * *"
 
 [schedules-galera]
 # galera specific
@@ -59,6 +63,7 @@ s9s/mysql/galera/wsrep_cluster_address.js="*/20 0 * * *"
 s9s/mysql/galera/wsrep_node_name.js="* 0 * * *"
 s9s/mysql/galera/wsrep_slave_threads.js="* 0 * * *"
 s9s/mysql/galera/wsrep_sst_method.js="* 0 * * *"
+s9s/mysql/galera/validate_sst_auth.js="0 * * * *"
 # connections
 s9s/mysql/connections/connections_used_pct.js="*/1 * * * *" 
 s9s/mysql/connections/max_connections_used_pct.js="*/2 * * * *"     
@@ -75,6 +80,8 @@ s9s/mysql/replication/binlog_settings.js="* 0 * * *"
 # security
 s9s/mysql/security/grant_no_password.js="* 0 * * *"
 s9s/mysql/security/grant_any_host.js="* 0 * * *"
+# p_s
+s9s/mysql/p_s/check_ps.js="* 0 * * *"
 
 [schedules-mysql_single]
 # connections
@@ -93,7 +100,8 @@ s9s/mysql/replication/binlog_settings.js="* 0 * * *"
 # security
 s9s/mysql/security/grant_no_password.js="* 0 * * *"
 s9s/mysql/security/grant_any_host.js="* 0 * * *"
-
+# p_s
+s9s/mysql/p_s/check_ps.js="* 0 * * *"
 
 [schedules-postgresql_single]
 
