--- a/s9s/project.conf
+++ b/s9s/project.conf
@@ -6,9 +6,9 @@
 [project]
 # uncomment & set/increase this value to forcibly upgrade
 # (overwrite, but backup will be made) the scripts
-version=20160121
+version=20160628
 # this value may be increased when the schedules has been changed
-schedule_version=1006
+schedule_version=1008
 
 [schedules]
 # these will be scheduled for all cluster types
@@ -42,7 +42,7 @@ s9s/mysql/p_s/check_ps.js="* 0 * * *"
 s9s/mysql/connections/connections_used_pct.js="*/1 * * * *" 
 s9s/mysql/connections/max_connections_used_pct.js="*/2 * * * *"     
 # health
-s9s/mysql/health/system_check.js="*/2 * * * *"        
+#s9s/mysql/health/system_check.js="*/2 * * * *"        
 # innodb
 s9s/mysql/innodb/check_logfile_size.js="*/20 * * * *" 
 s9s/mysql/innodb/innodb_dirty_pages_pct.js="5 * * * *"
@@ -68,7 +68,7 @@ s9s/mysql/galera/validate_sst_auth.js="0 * * * *"
 s9s/mysql/connections/connections_used_pct.js="*/1 * * * *" 
 s9s/mysql/connections/max_connections_used_pct.js="*/2 * * * *"     
 # health
-s9s/mysql/health/system_check.js="*/2 * * * *"        
+#s9s/mysql/health/system_check.js="*/2 * * * *"        
 # innodb
 s9s/mysql/innodb/check_logfile_size.js="*/20 * * * *" 
 s9s/mysql/innodb/innodb_dirty_pages_pct.js="*/5 * * * *"
@@ -82,13 +82,15 @@ s9s/mysql/security/grant_no_password.js="* 0 * * *"
 s9s/mysql/security/grant_any_host.js="* 0 * * *"
 # p_s
 s9s/mysql/p_s/check_ps.js="* 0 * * *"
+s9s/mysql/p_s/no_indexes_used.js="0 0 * * *"
+s9s/mysql/p_s/unused_indexes.js="0 0 * * *"
 
 [schedules-mysql_single]
 # connections
 s9s/mysql/connections/connections_used_pct.js="*/1 * * * *" 
 s9s/mysql/connections/max_connections_used_pct.js="*/2 * * * *"     
 # health
-s9s/mysql/health/system_check.js="*/2 * * * *"        
+#s9s/mysql/health/system_check.js="*/2 * * * *"        
 # innodb
 s9s/mysql/innodb/check_logfile_size.js="*/20 * * * *" 
 s9s/mysql/innodb/innodb_dirty_pages_pct.js="/5 * * * *"
@@ -106,4 +108,6 @@ s9s/mysql/p_s/check_ps.js="* 0 * * *"
 [schedules-postgresql_single]
 
 [schedules-mongodb]
-
+s9s/mongodb/connections/connections.js="* * * * *"
+s9s/mongodb/connections/tickets.js="* * * * *"
+s9s/mongodb/replication/check_lag.js="* * * * *"
