--- a/s9s/project.conf
+++ b/s9s/project.conf
@@ -1,26 +1,26 @@
 #
 # Imperative script project file
 #
-# Copyright 2015-2016 Severalines AB
+# Copyright 2015-2017 Severalines AB
 #
 [project]
 # uncomment & set/increase this value to forcibly upgrade
 # (overwrite, but backup will be made) the scripts
-version=20161222
+version=20171212
 # this value may be increased when the schedules has been changed
-schedule_version=1011
+schedule_version=1016
 
 [schedules]
 # these will be scheduled for all cluster types
-s9s/host/cpu_usage.js="*/5 * * * *"
+s9s/host/cpu_usage.js="*/30 * * * *"
 s9s/host/disk_space_usage.js="*/30 * * * *"
 #s9s/host/numa_check.js="* 0 * * *"
 s9s/host/swappiness.js="* 0 * * *"
 
 [schedules-mysqlcluster]
 # connections
-s9s/mysql/connections/connections_used_pct.js="*/1 * * * *" 
-s9s/mysql/connections/max_connections_used_pct.js="*/2 * * * *"     
+s9s/mysql/connections/connections_used_pct.js="*/1 * * * *"
+s9s/mysql/connections/max_connections_used_pct.js="*/2 * * * *"
 # health
 #s9s/mysql/health/system_check.js="*/2 * * * *"        
 # schema 
@@ -37,19 +37,18 @@ s9s/ndbcluster/index_memory_usage.js="*/5 * * * *"
 # p_s
 s9s/mysql/p_s/check_ps.js="* 0 * * *"
 
-
 [schedules-replication]
 # connections
-s9s/mysql/connections/connections_used_pct.js="*/1 * * * *" 
-s9s/mysql/connections/max_connections_used_pct.js="*/2 * * * *"     
+s9s/mysql/connections/connections_used_pct.js="*/1 * * * *"
+s9s/mysql/connections/max_connections_used_pct.js="*/2 * * * *"
 # health
 #s9s/mysql/health/system_check.js="*/2 * * * *"        
 # innodb
-s9s/mysql/innodb/check_logfile_size.js="*/20 * * * *" 
-s9s/mysql/innodb/innodb_dirty_pages_pct.js="5 * * * *"
+s9s/mysql/innodb/check_logfile_size.js="0 0 * * *"
+s9s/mysql/innodb/innodb_dirty_pages_pct.js="*/5 * * * *"
 # schema 
-s9s/mysql/schema/schema_check_myisam.js="*/20 * * * *"
-s9s/mysql/schema/schema_check_nopk.js="*/20 * * * *"
+s9s/mysql/schema/schema_check_myisam.js="1 * * * *"
+s9s/mysql/schema/schema_check_nopk.js="2 * * * *"
 # replication
 s9s/mysql/replication/binlog_settings.js="* 0 * * *"
 # security
@@ -58,6 +57,29 @@ s9s/mysql/security/grant_any_host.js="* 0 * * *"
 # p_s
 s9s/mysql/p_s/check_ps.js="* 0 * * *"
 s9s/mysql/p_s/top_queries.js="*/30 * * * *"
+
+[schedules-group_replication]
+# connections
+s9s/mysql/connections/connections_used_pct.js="*/1 * * * *"
+s9s/mysql/connections/max_connections_used_pct.js="*/2 * * * *"
+# health
+#s9s/mysql/health/system_check.js="*/2 * * * *"        
+# innodb
+s9s/mysql/innodb/check_logfile_size.js="0 0 * * *"
+s9s/mysql/innodb/innodb_dirty_pages_pct.js="*/5 * * * *"
+# schema
+s9s/mysql/schema/schema_check_myisam.js="1 * * * *"
+s9s/mysql/schema/schema_check_nopk.js="2 * * * *"
+# replication
+s9s/mysql/replication/binlog_settings.js="* 0 * * *"
+# security
+s9s/mysql/security/grant_no_password.js="* 0 * * *"
+s9s/mysql/security/grant_any_host.js="* 0 * * *"
+# p_s
+s9s/mysql/p_s/check_ps.js="* 0 * * *"
+s9s/mysql/p_s/top_queries.js="*/30 * * * *"
+# group repl specifics
+s9s/mysql/group_repl/compatible_schema.js="0 5 * * *"
 
 [schedules-galera]
 # galera specific
@@ -66,17 +88,18 @@ s9s/mysql/galera/wsrep_node_name.js="* 0 * * *"
 s9s/mysql/galera/wsrep_slave_threads.js="* 0 * * *"
 s9s/mysql/galera/wsrep_sst_method.js="* 0 * * *"
 s9s/mysql/galera/validate_sst_auth.js="0 * * * *"
+s9s/mysql/galera/check_gra_log_files.js="0 1 * * *"
 # connections
-s9s/mysql/connections/connections_used_pct.js="*/1 * * * *" 
-s9s/mysql/connections/max_connections_used_pct.js="*/2 * * * *"     
+s9s/mysql/connections/connections_used_pct.js="*/1 * * * *"
+s9s/mysql/connections/max_connections_used_pct.js="*/2 * * * *"
 # health
 #s9s/mysql/health/system_check.js="*/2 * * * *"        
 # innodb
-s9s/mysql/innodb/check_logfile_size.js="*/20 * * * *" 
+s9s/mysql/innodb/check_logfile_size.js="0 0 * * *"
 s9s/mysql/innodb/innodb_dirty_pages_pct.js="*/5 * * * *"
-# schema 
-s9s/mysql/schema/schema_check_myisam.js="*/20 * * * *"
-s9s/mysql/schema/schema_check_nopk.js="*/20 * * * *"
+# schema
+s9s/mysql/schema/schema_check_myisam.js="1 * * * *"
+s9s/mysql/schema/schema_check_nopk.js="2 * * * *"
 # replication
 s9s/mysql/replication/binlog_settings.js="* 0 * * *"
 # security
@@ -84,22 +107,22 @@ s9s/mysql/security/grant_no_password.js="* 0 * * *"
 s9s/mysql/security/grant_any_host.js="* 0 * * *"
 # p_s
 s9s/mysql/p_s/check_ps.js="* 0 * * *"
-s9s/mysql/p_s/top_queries.js="*/30 * * * *"
 s9s/mysql/p_s/no_indexes_used.js="0 0 * * *"
 s9s/mysql/p_s/unused_indexes.js="0 0 * * *"
+s9s/mysql/p_s/top_queries.js="*/30 * * * *"
 
 [schedules-mysql_single]
 # connections
-s9s/mysql/connections/connections_used_pct.js="*/1 * * * *" 
-s9s/mysql/connections/max_connections_used_pct.js="*/2 * * * *"     
+s9s/mysql/connections/connections_used_pct.js="*/1 * * * *"
+s9s/mysql/connections/max_connections_used_pct.js="*/2 * * * *"
 # health
 #s9s/mysql/health/system_check.js="*/2 * * * *"        
 # innodb
-s9s/mysql/innodb/check_logfile_size.js="*/20 * * * *" 
-s9s/mysql/innodb/innodb_dirty_pages_pct.js="/5 * * * *"
-# schema 
-s9s/mysql/schema/schema_check_myisam.js="*/20 * * * *"
-s9s/mysql/schema/schema_check_nopk.js="*/20 * * * *"
+s9s/mysql/innodb/check_logfile_size.js="0 0 * * *"
+s9s/mysql/innodb/innodb_dirty_pages_pct.js="*/5 * * * *"
+# schema
+s9s/mysql/schema/schema_check_myisam.js="1 * * * *"
+s9s/mysql/schema/schema_check_nopk.js="2 * * * *"
 # replication
 s9s/mysql/replication/binlog_settings.js="* 0 * * *"
 # security
